# btstack_test

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  Makefile  README.md  a2dp_codec_api.h  a2dp_decoder.c  a2dp_decoder.h  a2dp_encoder.c  a2dp_encoder.h  a2dp_sink_demo.c  a2dp_source_demo.c  btstack_config.h  btstack_port.c  es9038q2m.c  es9038q2m.h  flash_prog_cfg.ini  libqcc743_on_bl616.c  main.c  proj.conf  send2lli.c
codecs/: 1k_sin.h  pcm_bridge.c  pcm_bridge.h
codecs/AAC/: .gitignore  CMakeLists.txt  aac_coder.h  aac_decoder.c
codecs/LC3/: .gitignore  lc3plus_coder.h  lc3plus_decoder.c
codecs/LDAC/: ldac_coder.h  ldac_decoder.c
codecs/LHDC/: lhdc_coder.h  lhdc_decoder.c
codecs/OPUS/: opus_coder.h
codecs/SBC/: .gitignore  sbc_coder.h  sbc_decoder.c
